fix nav button mobile viewport response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,9 +167,10 @@ footer {
     .navigation-links ul li{
         display: flex;
         flex-wrap: wrap-reverse;
-        text-align: right;
+        text-align: center;
         flex-direction: column;
-        justify-content: none;
-        margin: 5px;
+        align-content: center;
+        margin: 10px;
+        margin-left: 300px;
 }
 }
